stdlib/public/SDK/Dispatch/Queue.swift
@@ -200,10 +200,10 @@ public extension DispatchQueue {
 		if group == nil && qos == .unspecified {
 			// Fast-path route for the most common API usage
 			if flags.isEmpty {
-				__dispatch_async(self, work)
+				_swift_dispatch_async(self, work)
 				return
 			} else if flags == .barrier {
-				__dispatch_barrier_async(self, work)
+				_swift_dispatch_barrier_async(self, work)
 				return
 			}
 		}
@@ -215,9 +215,9 @@ public extension DispatchQueue {
 		}
 
 		if let g = group {
-			__dispatch_group_async(g, self, block)
+			_swift_dispatch_group_async(g, self, block)
 		} else {
-			__dispatch_async(self, block)
+			_swift_dispatch_async(self, block)
 		}
 	}
 
@@ -292,9 +292,9 @@ public extension DispatchQueue {
 	{
 		if #available(OSX 10.10, iOS 8.0, *), qos != .unspecified || !flags.isEmpty {
 			let item = DispatchWorkItem(qos: qos, flags: flags, block: work)
-			__dispatch_after(deadline.rawValue, self, item._block)
+			_swift_dispatch_after(deadline.rawValue, self, item._block)
 		} else {
-			__dispatch_after(deadline.rawValue, self, work)
+			_swift_dispatch_after(deadline.rawValue, self, work)
 		}
 	}
 
@@ -306,20 +306,20 @@ public extension DispatchQueue {
 	{
 		if #available(OSX 10.10, iOS 8.0, *), qos != .unspecified || !flags.isEmpty {
 			let item = DispatchWorkItem(qos: qos, flags: flags, block: work)
-			__dispatch_after(wallDeadline.rawValue, self, item._block)
+			_swift_dispatch_after(wallDeadline.rawValue, self, item._block)
 		} else {
-			__dispatch_after(wallDeadline.rawValue, self, work)
+			_swift_dispatch_after(wallDeadline.rawValue, self, work)
 		}
 	}
 
 	@available(OSX 10.10, iOS 8.0, *)
 	public func asyncAfter(deadline: DispatchTime, execute: DispatchWorkItem) {
-		__dispatch_after(deadline.rawValue, self, execute._block)
+		_swift_dispatch_after(deadline.rawValue, self, execute._block)
 	}
 
 	@available(OSX 10.10, iOS 8.0, *)
 	public func asyncAfter(wallDeadline: DispatchWallTime, execute: DispatchWorkItem) {
-		__dispatch_after(wallDeadline.rawValue, self, execute._block)
+		_swift_dispatch_after(wallDeadline.rawValue, self, execute._block)
 	}
 
 	@available(OSX 10.10, iOS 8.0, *)
